syntax = "proto3";

package com.books.demo.proto.v1;

import "google/api/annotations.proto";

option java_package = "com.books.demo.proto.v1";
option java_multiple_files = true;
service BookService {
     /**
	 * Creates new book to store in the sytem
	 */ rpc UpdateBook(UpdateBookRequest) returns (Book) {
		option (google.api.http) = {
			post : "/v1/books"
			body :"book" };
	}
     /**
	 * Finds a book in the system by its id.
	 */ rpc GetBook (GetBookRequest) returns (Book) {
		option (google.api.http) = {
			get : "/v1/books/{book_id}" };
	}
	/**
	 * Returns the list of books in the system.
	 */ rpc ListBooks (ListBooksRequest) returns (ListBooksResponse) {
		option (google.api.http) = {
			get : "/v1/books" };
	}
}

message UpdateBookRequest {
	Book book = 1;
	// Optional associated LRO id if this is part of an LRO
	string lro_id = 2;
}

message GetBookRequest {
	string book_id = 1;
}

message Book {
	string id = 1;
	string name = 2;
	string description = 3;
}

message ListBooksRequest {
}

message ListBooksResponse {
	repeated Book books = 1;
}

/**
 * Enum used for pubsub attributes on book status.
 */
enum BookStatus {
    BOOK_STATUS_UNKNOWN = 0;
    BOOK_STATUS_MISSING = 1;
    BOOK_STATUS_CREATED = 2;
}
